--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <li><a href="index.html">Django</a></li>
         <li><a href="pagini/summary.html">Summary</a></li>
         <li><a href="pagini/actors.html">Actors</a></li>
-        <li><a href="pagini/director.php">Director</a></li>
+        <li><a href="pagini/directors.php">Director</a></li>
         <li><a href="pagini/contacts.html">Contacts</a></li>
         <li><a href="pagini/paramount.html">Watch Now!</a></li>
         <div class="topnav-right">
