--- a/pagini/register.html
+++ b/pagini/register.html
@@ -21,33 +21,28 @@
         <div class="header">
             <h2>Sign up</h2>
         </div>
-		<form id="registration_form">
+		<form action="../db/config.php" method="post" class="form" id="formValidation">
 			<div class="form-control">
-                <label>First Name</label>
-				<input type="text" id="form_fname" name="" required="">
-				<small class="error_form" id="fname_error_message"></small>	
+                <label>First Name:</label>
+				<input type="text" id="fname" name="fname" placeholder="John">
 			</div>
 			<div class="form-control">
-                <label>Second Name</label>
-				<input type="text" id="form_sname" name="" required="">
-				<small class="error_form" id="sname_error_message"></small>
+                <label>Second Name:</label>
+				<input type="text" id="sname" name="sname" placeholder="Doe">
 			</div>
 			<div class="form-control">
-                <label>Email id</label>	
-				<input type="email" id="form_email" name="" required="">
-				<small class="error_form" id="email_error_message"></small>
+                <label>Email:</label>	
+				<input type="email" id="email" name="email" placeholder="email@example.com">
 			</div>
 			<div class="form-control">
-                <label>Password</label>	
-				<input type="password" id="form_password" name="" required="">
-				<small class="error_form" id="password_error_message"></small>
+                <label>Password:</label>	
+				<input type="password" id="password" name="password" placeholder="*************">
 			</div>
 			<div class="form-control">
-                <label>Re-Enter Password</label>
-				<input type="password" id="form_retype_password" name="" required="">
-				<small class="error_form" id="retype_password_error_message"></small>	
+                <label>Re-Enter Password:</label>
+				<input type="password" id="password2" name="password2" placeholder="*************">
 			</div>
-			<input type="submit" value="Register" name="">
+			<button name="submit_reg" type="submit" class="btn">Register</button>
 		</form>
 	</div>
     <ul>
@@ -63,7 +58,8 @@
 		</div>
     </ul>
 	<script type="text/javascript" src="../scripts/main.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-    <script src="register.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.js"></script>
+    <script src="../scripts/forms_validation.js"></script>
 </body>
 </html>
