--- a/pagini/sign.html
+++ b/pagini/sign.html
@@ -19,38 +19,18 @@
     </div>
         <div class="container">
           <div class="header">
-            <h2>Create Account</h2>
+            <h2>Sign in</h2>
           </div>
-        <form class="form" id="form">
+        <form action="../db/config.php" method="post" id="formValidation" class="form">
           <div class="form-control">
-            <label>Username</label>
-            <input id="username" type="text" placeholder="niko12">
-            <i class="fas fa-check-circle"></i>
-            <i class="fas fa-exclamation-circle"></i>
-            <small>Error message</small>
+            <label>Email:</label>
+            <input type="email" id="email" name="email" placeholder="email@example.com">
           </div>
           <div class="form-control">
-            <label>Email</label>
-            <input id="email" type="email" placeholder="niko.12@gmail.com">
-            <i class="fas fa-check-circle"></i>
-            <i class="fas fa-exclamation-circle"></i>
-            <small>Error message</small>
+            <label>Password:</label>
+            <input type="password" id="password" name="password" placeholder="*************">
           </div>
-          <div class="form-control">
-            <label>Password</label>
-            <input id="password" type="password" placeholder="password">
-            <i class="fas fa-check-circle"></i>
-            <i class="fas fa-exclamation-circle"></i>
-            <small>Error message</small>
-          </div>
-          <div class="form-control">
-            <label>Password check</label>
-            <input id="password2" type="password" placeholder="password two">
-            <i class="fas fa-check-circle"></i>
-            <i class="fas fa-exclamation-circle"></i>
-            <small>Error message</small>
-          </div>
-          <button>Submit</button>
+          <button name="submit_log" type="submit" class="btn">Submit</button>
         </form>
       </div>
       <ul>
@@ -65,8 +45,9 @@
           <li><a href="register.html">Sign up</a></li>
         </div>
       </ul>
-      <script src="https://kit.fontawesome.com/313ded42ed.js" crossorigin="anonymous"></script>
-      <script type="text/javascript" src="../scripts/sign.js"></script>
-      <script type="text/javascript" src="../scripts/main.js"></script>
+    <script type="text/javascript" src="../scripts/main.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.js"></script>
+    <script src="../scripts/forms_validation.js"></script>
   </body>
 </html>
