Made some changes in validation PHP.

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
         <li><a href="pagini/summary.html">Summary</a></li>
         <li><a href="pagini/actors.html">Actors</a></li>
         <li><a href="pagini/directors.php">Director</a></li>
-        <li><a href="pagini/contacts.html">Contacts</a></li>
+        <li><a href="pagini/contacts.php">Contacts</a></li>
         <li><a href="pagini/paramount.html">Watch Now!</a></li>
         <div class="topnav-right">
-            <li><a href="pagini/sign.html">Sign in</a></li>
-            <li><a href="pagini/register.html">Sign up</a></li>
+            <li><a href="pagini/sign.php">Sign in</a></li>
+            <li><a href="pagini/register.php">Sign up</a></li>
         </div>
       </ul>
       <script type="text/javascript" src="scripts/main.js"></script>
